Update Drawings e Commesse V2502+V3085+V3168+V3510

--- a/Prevu.Drawings/Machines/Pits/PSP_Collecting_Pit_A.xaml
+++ b/Prevu.Drawings/Machines/Pits/PSP_Collecting_Pit_A.xaml
@@ -16,14 +16,14 @@
             </Canvas.Resources>
             <!--Unknown tag: sodipodi:namedview-->
             <Canvas Name="g6" Clip="{StaticResource clip0_1207_134}">
-                <Path  Name="path2" Fill="#FF808080">
-                    <Path.Data>
-                        <PathGeometry Figures="M0 5.40909C0 2.42173 2.42173 0 5.40909 0H126.591C129.578 0 132 2.42173 132 5.40909V104.318V129.591C132 132.578 129.578 135 126.591 135H28.4131C26.6498 135 24.9972 134.141 23.9847 132.697L0.980643 99.8982C0.342408 98.9882 0 97.9037 0 96.7922V5.40909Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Path Name="path4" Fill="#FF808080">
+                <Path x:Name="path4" Fill="#FF808080" >
                     <Path.Data>
                         <PathGeometry Figures="M125 2C125 0.89543 125.895 0 127 0H193C194.105 0 195 0.895431 195 2V9.70962C195 10.5372 194.49 11.2793 193.718 11.5764L127.718 36.9549C126.408 37.4587 125 36.4917 125 35.0882V2Z" FillRule="NonZero"/>
+                    </Path.Data>
+                </Path>
+                <Path  x:Name="path2" Fill="#FF808080" Effect="{StaticResource MaterialDesignElevationShadow1}">
+                    <Path.Data>
+                        <PathGeometry Figures="M0 5.40909C0 2.42173 2.42173 0 5.40909 0H126.591C129.578 0 132 2.42173 132 5.40909V104.318V129.591C132 132.578 129.578 135 126.591 135H28.4131C26.6498 135 24.9972 134.141 23.9847 132.697L0.980643 99.8982C0.342408 98.9882 0 97.9037 0 96.7922V5.40909Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
             </Canvas>
