--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -214,10 +214,6 @@
             VerticalAlignment="Top" 
             ComponentName="220-23-CV1" Grid.Row="1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="820,225,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="220-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="500,250,0,0" 
             VerticalAlignment="Top" 
             ComponentName="210-22-CV1" Grid.Row="1"/>
@@ -294,7 +290,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="205,73,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="210-71-ECS3" Loaded="DeviceLabel_Loaded"/>
+            ComponentName="210-71-ECS3"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="348,73,0,0" 
             VerticalAlignment="Top" 
@@ -321,6 +317,11 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="443,73,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="210-71-ECS6" Loaded="DeviceLabel_Loaded"/>
+            ComponentName="210-71-ECS6" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="897,237,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-SEPARATION" Grid.RowSpan="2"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="992,237,0,0" VerticalAlignment="Top" ComponentName="220-VIEW" DetailsPageName="D220" HideComponentName="True" Grid.RowSpan="2"/>
     </Grid>
 </UserControl>
