--- a/Prevu.Synoptics.V2502_Polymer_Processor/P484.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P484.xaml
@@ -149,7 +149,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="452,78,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="470-01-MA1" Loaded="DeviceLabel_Loaded"/>
+            ComponentName="470-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="136,93,0,0" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="106,62,0,0" 
