--- a/Prevu.Synoptics.V3085_Anviplas/P020.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P020.xaml
@@ -17,7 +17,7 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="251,650,0,0" VerticalAlignment="Top" Color="Oil" Width="91" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="251,650,0,0" VerticalAlignment="Top" Color="Water" Width="91" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-23-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -27,7 +27,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="537,466,0,0" VerticalAlignment="Top" Color="Oil" Width="208" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="537,466,0,0" VerticalAlignment="Top" Color="Oil" Width="208" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-24-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -37,7 +37,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="199,466,0,0" VerticalAlignment="Top" Color="Oil" Width="340" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="199,466,0,0" VerticalAlignment="Top" Color="Oil" Width="340" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -47,7 +47,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="215,592,0,0" VerticalAlignment="Top" Color="Oil" Width="151" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="215,592,0,0" VerticalAlignment="Top" Color="Oil" Width="151" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -67,7 +67,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="182,519,0,0" VerticalAlignment="Top" Color="Oil" Width="511" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="182,519,0,0" VerticalAlignment="Top" Color="Oil" Width="511" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -78,7 +78,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Border BorderThickness="1" HorizontalAlignment="Left" Height="215" Margin="116,416,0,0" VerticalAlignment="Top" Width="117" Background="Gray" CornerRadius="15,15,15,15"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="819,609,0,0" VerticalAlignment="Top" Width="164" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="819,609,0,0" VerticalAlignment="Top" Width="164" StatusComponent="020-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -88,7 +88,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="897,687,0,0" VerticalAlignment="Top" Width="149" StatusComponent="018-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="897,687,0,0" VerticalAlignment="Top" Width="149" StatusComponent="020-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="961,207,0,0" VerticalAlignment="Top" Width="149" StatusComponent="660-22-CV1" Color="Air" Height="6"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="924,244,0,0" VerticalAlignment="Top" Width="79" StatusComponent="660-22-CV1" Color="Air" Height="6" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
@@ -233,7 +233,7 @@
             VerticalAlignment="Top" 
             ComponentName="020-42-TT1"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="558,520,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="668,518,0,0" VerticalAlignment="Top" Color="Oil" Width="344" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="668,518,0,0" VerticalAlignment="Top" Color="Oil" Width="344" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -243,12 +243,12 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="961,500,0,0" VerticalAlignment="Top" Color="Oil" Width="48" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="961,500,0,0" VerticalAlignment="Top" Color="Oil" Width="48" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
                     <SkewTransform/>
-                    <RotateTransform Angle="90.4"/>
+                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -273,7 +273,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="307,556,0,0" VerticalAlignment="Top" Color="Oil" Width="91" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="307,556,0,0" VerticalAlignment="Top" Color="Oil" Width="91" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="020-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -337,7 +337,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="947,440,0,0" VerticalAlignment="Top" Color="Oil" Width="78" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="947,440,0,0" VerticalAlignment="Top" Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -348,7 +348,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Border BorderThickness="1" HorizontalAlignment="Left" Height="25" Margin="973,476,0,0" VerticalAlignment="Top" Width="25" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="15,15,15,15"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="976,409,0,0" VerticalAlignment="Top" Color="Oil" Width="113" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="976,409,0,0" VerticalAlignment="Top" Color="Water" Width="113" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="464-02-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
