--- a/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
@@ -287,10 +287,6 @@
             VerticalAlignment="Top" 
             ComponentName="220-23-CV1" Grid.Row="1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="820,225,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="220-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="698,222,0,0" 
             VerticalAlignment="Top" 
             ComponentName="210-22-CV1" Grid.Row="1"/>
@@ -310,5 +306,18 @@
         <TextBlock HorizontalAlignment="Left" Margin="87,58,0,176" TextWrapping="Wrap" TextAlignment="Center" 
             FontSize="36" Foreground="Black" FontWeight="Bold"><Run Language="it-it" Text="Q11"/></TextBlock>
         <Rectangle x:Name="BorderChemicals" Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="53,39,942,520" Grid.RowSpan="2"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="897,237,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-SEPARATION" Grid.RowSpan="2"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="992,237,0,0" VerticalAlignment="Top" ComponentName="220-VIEW" DetailsPageName="D220" HideComponentName="True" Grid.RowSpan="2"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="698,363,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="210-DISCH" Grid.Row="1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="982,454,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="220-DISCH" Grid.Row="1"/>
     </Grid>
 </UserControl>
