--- a/Prevu.Synoptics.V3168_Sirplaste/P430.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P430.xaml
@@ -40,7 +40,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="458,654,0,0" VerticalAlignment="Top" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" StatusComponent="450-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="458,675,0,0" VerticalAlignment="Top" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" StatusComponent="450-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -50,7 +50,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="438,616,0,0" VerticalAlignment="Top" Color="Water" Width="62" StatusComponent="450-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="438,637,0,0" VerticalAlignment="Top" Color="Water" Width="62" StatusComponent="450-21-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="935,368,0,0" VerticalAlignment="Top" Width="144" Color="Water" StatusComponent="455-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -217,7 +217,7 @@
                 </TransformGroup>
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="363,568,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="370,589,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
@@ -267,7 +267,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="444,129,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="430-01-MA1"/>
+            ComponentName="430-SEPARATION"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="537,254,0,0" 
             VerticalAlignment="Top" 
@@ -311,7 +311,7 @@
             VerticalAlignment="Top" 
             ComponentName="420-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="372,548,0,0" 
+            Margin="379,569,0,0" 
             VerticalAlignment="Top" 
             ComponentName="450-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -326,5 +326,10 @@
             Margin="1172,180,0,0" 
             VerticalAlignment="Top" 
             ComponentName="455-01-MA1"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="539,129,0,0" VerticalAlignment="Top" ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="286,538,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="420-23-CV1"/>
     </Grid>
 </UserControl>
